/**
 * Created by Denis Bondarenko <bond.den@gmail.com> on 16.05.2015.
 */
'use strict';
export class Renderer{

	renderParsedData(){}

}
